--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -105,7 +105,7 @@
                             android:adjustViewBounds="true"
                             android:maxHeight="60dp"
                             android:scaleType="fitEnd"
-                            android:src="@drawable/c0" />
+                            android:src="@drawable/touming" />
 
                         <ImageView
                             android:layout_width="0dp"
@@ -114,7 +114,7 @@
                             android:layout_weight="1"
                             android:adjustViewBounds="true"
                             android:maxHeight="60dp"
-                            android:src="@drawable/arrow" />
+                            android:src="@drawable/touming" />
 
                         <ImageView
                             android:layout_width="0dp"
@@ -124,7 +124,7 @@
                             android:adjustViewBounds="true"
                             android:maxHeight="60dp"
                             android:scaleType="fitStart"
-                            android:src="@drawable/c0" />
+                            android:src="@drawable/touming" />
                     </LinearLayout>
 
                     <TextView
