--- a/app/src/main/res/layout/list_contactinfo_item.xml
+++ b/app/src/main/res/layout/list_contactinfo_item.xml
@@ -8,10 +8,12 @@
     android:gravity="center_vertical">
 
     <ImageView
-        android:id="@+id/iv_phone"
+        android:id="@+id/iv_icon"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_phone_info"
+        android:scaleType="centerInside"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"/>
 
     <LinearLayout
@@ -27,14 +29,29 @@
             android:textColor="@color/colorText"
             android:textSize="20sp"
             android:gravity="center_vertical"/>
-        <TextView
-            android:id="@+id/tv_location"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorTextLight"
-            android:textSize="15sp"
-            android:gravity="center_vertical"
-            />
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorTextLight"
+                android:textSize="15sp"
+                android:layout_marginRight="15dp"
+                android:gravity="center_vertical"
+                />
+            <TextView
+                android:id="@+id/tv_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorTextLight"
+                android:textSize="15sp"
+                android:gravity="center_vertical"
+                />
+        </LinearLayout>
+
     </LinearLayout>
 
     <ImageButton
