--- a/app/src/main/res/layout/list_record_item.xml
+++ b/app/src/main/res/layout/list_record_item.xml
@@ -19,33 +19,13 @@
         android:orientation="horizontal"
         android:paddingTop="10dp"
         android:paddingBottom="10dp">
-        <RelativeLayout
+
+        <com.example.sysucjl.familytelephonedirectory.view.AvatarViewGroup
+            android:id="@+id/avatar_group"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="25dp"
-            android:layout_marginRight="20dp">
-            <ImageView
-                android:id="@+id/iv_record_icon"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:src="@drawable/ic_round_img"
-                android:tint="@color/colorPrimary"
-                />
-            <ImageView
-                android:id="@+id/img_avatar_sim"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_centerInParent="true"
-                android:src="@drawable/ic_avatar_sim"/>
-            <TextView
-                android:id="@+id/tv_avatar_name"
-                android:layout_width="fill_parent"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"
-                android:gravity="center"
-                android:layout_height="fill_parent" />
-        </RelativeLayout>
-
+            android:layout_marginRight="20dp"/>
         <LinearLayout
             android:id="@+id/main_message"
             android:layout_width="wrap_content"
