--- a/app/src/main/res/drawable/selector_add_button.xml
+++ b/app/src/main/res/drawable/selector_add_button.xml
@@ -3,22 +3,22 @@
 
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="#FFD6D4D4"/>
-            <corners android:radius="3dp"/>
+            <solid android:color="#e9e7e7"/>
+            <corners android:radius="0dp"/>
         </shape>
     </item>
 
     <item android:state_focused="true">
         <shape>
-            <solid android:color="#FFD6D4D4"/>
-            <corners android:radius="3dp"/>
+            <solid android:color="#e9e7e7"/>
+            <corners android:radius="0dp"/>
         </shape>
     </item>
 
     <item>
         <shape>
-            <solid android:color="#FFF2F2F2"/>
-            <corners android:radius="3dp"/>
+            <solid android:color="@android:color/transparent"/>
+            <corners android:radius="0dp"/>
         </shape>
     </item>
 </selector>
