--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -75,9 +75,7 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cv_contact_info"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
+                style="@style/ContactInfoCarviewStyle"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -105,24 +103,31 @@
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
-            <LinearLayout
-                android:id="@+id/ll_wedther"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <android.support.v7.widget.CardView
-                    android:layout_width="fill_parent"
+            <android.support.v7.widget.CardView
+                android:id="@+id/cv_wedther"
+                style="@style/ContactInfoCarviewStyle">
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="5dp">
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/tv_wedther_title"
+                        android:layout_width="80dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="5"
+                        android:text="天气"
+                        android:gravity="center"
+                        android:textSize="15sp"
+                        android:padding="15dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorDivide"/>
+                    <LinearLayout
+                        android:id="@+id/ll_wedther_icon_background"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
                         android:orientation="horizontal">
-
                         <ImageView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -132,7 +137,6 @@
                             android:maxHeight="60dp"
                             android:scaleType="fitEnd"
                             android:src="@drawable/touming" />
-
                         <ImageView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -144,8 +148,7 @@
 
                         <ImageView
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/weather2"
+                            android:layout_height="wrap_content" android:id="@+id/weather2"
                             android:layout_weight="2"
                             android:adjustViewBounds="true"
                             android:maxHeight="60dp"
@@ -154,36 +157,65 @@
                     </LinearLayout>
 
                     <TextView
-                        android:layout_width="fill_parent"
-                        android:layout_height="200dp"
+                        android:padding="15dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="天气"
                         android:id="@+id/weather"
                         android:autoText="false"
-                        android:gravity="center"
-                        android:textSize="20dp"/>
-                </android.support.v7.widget.CardView>
-
-                <android.support.v7.widget.CardView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp">
-                    <Button
+                        android:gravity="left|center_vertical"
+                        android:layout_weight="1"
+                        android:textSize="15dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorDivide"/>
+                    <TextView
                         android:id="@+id/btn_sent_mesage"
-                        android:layout_width="fill_parent"
-                        android:layout_height="55dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="15dp"
+                        android:gravity="center"
+                        android:background="@drawable/selector_add_button"
                         android:text="发送关怀短信"
-                        android:textSize="15sp"
-                        android:textColor="@android:color/white"
-                        android:background="@android:color/transparent"/>
-                </android.support.v7.widget.CardView>
-            </LinearLayout>
+                        android:textSize="15sp"/>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_edit"
+                        android:text="编辑联系人"
+                        style="@style/ContactInfoButtonStyle" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorDivide"/>
+                    <TextView
+                        android:id="@+id/tv_delete"
+                        android:text="删除联系人"
+                        style="@style/ContactInfoButtonStyle" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorDivide"/>
+                    <TextView
+                        android:id="@+id/tv_blacklist"
+                        android:text="加入黑名单"
+                        style="@style/ContactInfoButtonStyle" />
+                </LinearLayout>
+
                 <Button
+                    android:visibility="gone"
                     android:id="@+id/btn_blacklist"
                     android:layout_width="fill_parent"
                     android:layout_height="55dp"
