--- a/app/src/main/res/layout/content_edit.xml
+++ b/app/src/main/res/layout/content_edit.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_edit"
+    android:paddingBottom="20dp"
     tools:context="com.example.sysucjl.familytelephonedirectory.EditActivity">
 
     <LinearLayout
@@ -45,153 +46,166 @@
 
         </FrameLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="20dp"
-            android:layout_marginTop="10dp">
+        <android.support.v7.widget.CardView
+            style="@style/ContactInfoCarviewStyle">
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:text="姓名"
-                    style="@style/EditItemTextStyle" />
-
-                <EditText
-                    android:id="@+id/ed_name"
-                    android:layout_marginLeft="20dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textSize="17sp"
-                    android:layout_gravity="center"/>
-
-                <FrameLayout
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_marginLeft="15dp"
-                    android:visibility="gone">
-                    <Spinner
-                        android:id="@+id/sp_avatar"
-                        android:layout_gravity="bottom|center"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:dropDownWidth="200dp"
-                        android:background="@null"
-                        android:dropDownHorizontalOffset="-16dp"
-                        android:dropDownVerticalOffset="100dp"></Spinner>
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_avatar_sim"
-                        android:scaleType="centerInside"
-                        android:padding="5dp"
-                        android:clickable="false"
-                        android:background="#FFE7E6E6"
-                        />
-                </FrameLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_marginTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:text="电话"
-                    style="@style/EditItemTextStyle" />
-
-                <include
-                    android:layout_marginLeft="20dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    layout="@layout/layout_edit_phone"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_extra_phones"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-            </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="20dp">
 
-            <TextView
-                android:id="@+id/tv_add_phone"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:text="添加新条目"
-                android:clickable="true"
-                android:gravity="center"
-                android:textColor="@color/colorTextLight"
-                android:background="@drawable/selector_add_button"
-                android:layout_marginLeft="0dp"
-                />
+                    <TextView
+                        android:text="姓名"
+                        style="@style/EditItemTextStyle" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="20dp">
+                    <EditText
+                        android:id="@+id/ed_name"
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textSize="17sp"
+                        android:layout_gravity="center"/>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="-20dp"
+                    android:layout_marginRight="-20dp"
+                    android:background="@color/colorDivide"/>
+
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp">
+
+                    <TextView
+                        android:text="电话"
+                        style="@style/EditItemTextStyle" />
+
+                    <include
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        layout="@layout/layout_edit_phone"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:id="@+id/ll_extra_phones"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                </LinearLayout>
 
                 <TextView
-                    android:text="邮箱"
-                    style="@style/EditItemTextStyle"/>
+                    android:id="@+id/tv_add_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:text="添加新条目"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:textColor="@color/colorPrimary"
+                    android:background="@drawable/selector_add_button"
+                    android:layout_marginLeft="0dp"/>
 
-                <include
-                    android:layout_marginLeft="20dp"
-                    android:layout_width="wrap_content"
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="-20dp"
+                    android:layout_marginRight="-20dp"
+                    android:background="@color/colorDivide"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    layout="@layout/layout_edit_email"/>
-            </LinearLayout>
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp">
 
+                    <TextView
+                        android:text="邮箱"
+                        style="@style/EditItemTextStyle"/>
+
+                    <include
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        layout="@layout/layout_edit_email"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_extra_emails"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp">
+                </LinearLayout>
+
+                <TextView
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:id="@+id/tv_add_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:text="添加新条目"
+                    android:gravity="center"
+                    android:textColor="@color/colorPrimary"
+                    android:background="@drawable/selector_add_button"
+                    android:layout_marginLeft="0dp"
+                    android:clickable="true"
+                    android:layout_marginTop="5dp"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_marginBottom="10dp"
+            style="@style/ContactInfoCarviewStyle">
             <LinearLayout
-                android:id="@+id/ll_extra_emails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tv_save"
+                    android:clickable="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:text="保存"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:textColor="@color/colorPrimary"
+                    android:background="@drawable/selector_add_button"
+                    />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/colorDivide"/>
+                <TextView
+                    android:id="@+id/tv_cancle"
+                    android:textStyle="bold"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:text="取消"
+                    android:textColor="@color/colorText"
+                    android:background="@drawable/selector_add_button"
+                    />
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/tv_add_email"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:text="添加新条目"
-                android:gravity="center"
-                android:textColor="@color/colorTextLight"
-                android:background="@drawable/selector_add_button"
-                android:layout_marginLeft="0dp"
-                android:clickable="true"
-                android:layout_marginTop="5dp"/>
-
-            <TextView
-                android:id="@+id/tv_save"
-                android:clickable="true"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:text="保存"
-                android:gravity="center"
-                android:textColor="@android:color/white"
-                android:background="@drawable/selector_edit_button"
-                android:layout_marginTop="15dp"
-                />
-
-            <TextView
-                android:id="@+id/tv_cancle"
-                android:clickable="true"
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:text="取消"
-                android:textColor="@color/colorText"
-                android:background="@drawable/selector_add_button"
-                android:layout_marginTop="15dp"/>
-        </LinearLayout>
+        </android.support.v7.widget.CardView>
     </LinearLayout>
 
 </ScrollView>
