--- a/app/src/main/res/layout/list_contactinfo_item.xml
+++ b/app/src/main/res/layout/list_contactinfo_item.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:background="@drawable/selector_add_button"
+    android:id="@+id/rl_contactinfo_background">
 
     <ImageView
         android:id="@+id/iv_icon"
