--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#0288d1</color>
     <color name="colorPrimaryDark">#0277bd</color>
-    <color name="colorAccent">#0288d1</color>
+    <color name="colorAccent">#737373</color>
 
     <color name="colorText">#333333</color>
     <color name="colorTextLight">#737373</color>
