--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -106,6 +106,7 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cv_wedther"
+                android:visibility="gone"
                 style="@style/ContactInfoCarviewStyle">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -232,7 +233,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:visibility="gone"
-                                android:src="@drawable/ic_refresh"
+                                android:src="@drawable/ic_refresh_weather"
                                 android:background="@drawable/selector_add_button"/>
                             <TextView
                                 android:id="@+id/tv_weather_state"
