--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -26,4 +26,8 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="colorPrimaryDark">@android:color/transparent</item>
     </style>
+
+    <style name="AppThemeCrop">
+        <item name="android:colorPrimaryDark">@android:color/black</item>
+    </style>
 </resources>
